--- a/notebooks/451_assignment1.ipynb
+++ b/notebooks/451_assignment1.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "## Assignment 1\n",
-    "Based off the provide jumpstart script by Professor Miller."
+    "Refactored from the provided jumpstart script by Professor Miller."
    ]
   },
   {
